--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "@janzho/vue-error-handler",
-    "version": "1.0.0-beta2",
+    "version": "1.0.0",
     "main": "index.js",
     "repository": "git@github.com:/JoeyHi/vue-error-handler.git",
     "author": "Joey <94593940@qq.com>",
     "license": "MIT",
     "scripts": {
-        "release": "node script/release.js",
         "commit": "git-cz"
     },
     "publishConfig": {
@@ -19,9 +18,6 @@
     },
     "devDependencies": {
         "commitizen": "^4.2.4",
-        "cz-conventional-changelog": "^3.3.0",
-        "inquirer": "^8.2.0",
-        "semver": "^7.3.5",
-        "standard-version": "^9.3.2"
+        "cz-conventional-changelog": "^3.3.0"
     }
 }
