--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@janzho/vue-error-handler",
-    "version": "1.0.0",
+    "name": "vue-error-recorder",
+    "version": "1.0.0-beta.1",
     "main": "index.js",
     "repository": "git@github.com:/JoeyHi/vue-error-handler.git",
     "author": "Joey <94593940@qq.com>",
@@ -19,5 +19,8 @@
     "devDependencies": {
         "commitizen": "^4.2.4",
         "cz-conventional-changelog": "^3.3.0"
+    },
+    "peerDependecies": {
+        "vue": "^3.2.0"
     }
 }
